--- a/Atmos-Frontend/package.json
+++ b/Atmos-Frontend/package.json
@@ -11,14 +11,15 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.2.1",
+		"@tailwindcss/typography": "^0.5.12",
 		"axios": "^1.6.7",
+		"chart.js": "^4.4.2",
+		"dotenv": "^16.4.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.4",
-		"redux-thunk": "^2.4.1",
-		"@tailwindcss/typography": "^0.5.12",
-		"dotenv": "^16.4.5",
-		"react-router-dom": "^6.22.0"
+		"react-router-dom": "^6.22.0",
+		"redux-thunk": "^2.4.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
