--- a/Atmos-Frontend/package.json
+++ b/Atmos-Frontend/package.json
@@ -14,6 +14,7 @@
 		"@tailwindcss/typography": "^0.5.12",
 		"axios": "^1.6.7",
 		"chart.js": "^4.4.2",
+		"chartjs-plugin-datalabels": "^2.2.0",
 		"dotenv": "^16.4.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
