--- a/Atmos-Frontend/package.json
+++ b/Atmos-Frontend/package.json
@@ -16,8 +16,10 @@
 		"chart.js": "^4.4.2",
 		"chartjs-plugin-datalabels": "^2.2.0",
 		"dotenv": "^16.4.5",
+		"leaflet": "^1.9.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-leaflet": "^4.2.1",
 		"react-redux": "^8.0.4",
 		"react-router-dom": "^6.22.0",
 		"redux-thunk": "^2.4.1"
