--- a/Atmos-Frontend/package.json
+++ b/Atmos-Frontend/package.json
@@ -27,6 +27,7 @@
 		"react-dom": "^18.2.0",
 		"react-leaflet": "^4.2.1",
 		"react-redux": "^8.0.4",
+		"react-responsive": "^10.0.0",
 		"react-router-dom": "^6.22.0",
 		"redux-thunk": "^2.4.1"
 	},
