--- a/Atmos-Frontend/package.json
+++ b/Atmos-Frontend/package.json
@@ -22,6 +22,7 @@
 		"chart.js": "^4.4.2",
 		"chartjs-plugin-datalabels": "^2.2.0",
 		"dotenv": "^16.4.5",
+		"framer-motion": "^11.11.9",
 		"leaflet": "^1.9.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
